bug(portfolio.css): Shifting y-axis of fake social icons to work better on iphone

--- a/src/styles/portfolio.css
+++ b/src/styles/portfolio.css
@@ -629,7 +629,7 @@ input:checked + .slider:before {
 }
 @media screen and (max-width: 450px) {
   #control-overlay .fake-social-links {
-    transform: translate(-50%, calc(-50% + 55px));
+    transform: translate(-50%, calc(-50% + 70px));
 
     button {
       width: 20px;
